<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.golendukhin.settingsSwitcher.MainActivity">

    <item
        android:id="@+id/save_menu_item"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="1"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/preferences_menu_item"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="0"
        android:title="@string/preferences"
        android:visible="true"
        app:showAsAction="always"/>
</menu>