<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weatherListViewModel"
            type="com.golendukhin.accentureweatherapp.list.WeatherListViewModel" />
    </data>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weather_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:context="com.golendukhin.accentureweatherapp.list.WeatherListFragment" />
</layout>