...
                app:layout_constraintStart_toEndOf="@+id/date_title_textView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                tools:text="4 Jan 2020"
                app:localDateFormatted="@{weather}"/>

            <TextView
                android:id="@+id/more_details_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
...
